--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ThirdPersonMap_2.ThirdPersonMap_2
+EditorStartupMap=/Game/MainMenu/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -8,7 +8,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/ThirdPersonMap_2.ThirdPersonMap_2
+GameDefaultMap=/Game/MainMenu/MainMenu.MainMenu
 ServerDefaultMap=/Game/Maps/ThirdPersonMap.ThirdPersonMap
 GlobalDefaultGameMode=/Script/MobileRPG.MobileRPGGameMode
 GlobalDefaultServerGameMode=None
