--- a/MobileRPG.uproject
+++ b/MobileRPG.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{51CC567F-4B85-CD30-D34E-B79C1F1D5292}",
+	"EngineAssociation": "5.1",
 	"Category": "",
 	"Description": "",
 	"Modules": [
